--- a/src/app/modules/admin/pages/campuses/campuses.component.html
+++ b/src/app/modules/admin/pages/campuses/campuses.component.html
@@ -3,9 +3,15 @@
   <section>
     <header>
       <h2>Sedes registradas</h2>
-      <span class="add material-symbols-outlined"> add </span>
+      <span
+        class="add material-symbols-outlined"
+        (click)="setIsRegistering()"
+        *ngIf="!isRegistering"
+      >
+        add
+      </span>
     </header>
-    <table>
+    <table *ngIf="!isRegistering">
       <thead>
         <tr>
           <th>#</th>
@@ -26,5 +32,35 @@
         </tr>
       </tbody>
     </table>
+    <form *ngIf="isRegistering">
+      <div class="flex">
+        <div class="info">
+          <label for="numeral">Número de sede</label>
+          <input type="number" id="numeral" required />
+        </div>
+        <div class="info">
+          <label for="cellphone">Número de celular</label>
+          <input type="text" id="cellphone" required />
+        </div>
+      </div>
+      <div class="info">
+        <label for="address">Dirección</label>
+        <input type="text" id="address" required />
+      </div>
+      <div class="flex">
+        <div class="info">
+          <label for="password">Contraseña</label>
+          <input type="password" id="password" required />
+        </div>
+        <div class="info">
+          <label for="repeatPassword">Confirmar contraseña</label>
+          <input type="password" id="repeatPassword" required />
+        </div>
+      </div>
+      <div class="actions">
+        <button type="submit">Registrar Sede</button>
+        <button type="button">Cancelar</button>
+      </div>
+    </form>
   </section>
 </main>
