update: set action to the cancel button

--- a/src/app/modules/admin/pages/campuses/campuses.component.html
+++ b/src/app/modules/admin/pages/campuses/campuses.component.html
@@ -59,7 +59,7 @@
       </div>
       <div class="actions">
         <button type="submit">Registrar Sede</button>
-        <button type="button">Cancelar</button>
+        <button type="button" (click)="setIsRegistering()">Cancelar</button>
       </div>
     </form>
   </section>
