--- a/src/app/modules/admin/pages/platforms/platforms.component.css
+++ b/src/app/modules/admin/pages/platforms/platforms.component.css
@@ -1,7 +1,7 @@
 main {
   background-color: var(--white-color);
   margin: 6rem 2rem 2rem 15rem;
-  height: calc(100vh - 8rem);
+  min-height: calc(100vh - 8rem);
   border-radius: 1rem;
   padding: 2rem;
   box-shadow: var(--shadow);
