--- a/src/app/modules/admin/pages/platforms/platforms.component.css
+++ b/src/app/modules/admin/pages/platforms/platforms.component.css
@@ -140,3 +140,9 @@ select:focus {
   outline: none;
   border-color: var(--secondary-color-500);
 }
+
+h3 {
+  color: var(--gray-color-900);
+  text-align: center;
+  padding: 2rem 0 1rem;
+}
