--- a/src/app/modules/admin/pages/campuses/campuses.component.html
+++ b/src/app/modules/admin/pages/campuses/campuses.component.html
@@ -35,29 +35,49 @@
         </tr>
       </tbody>
     </table>
-    <form *ngIf="isRegistering">
+    <form *ngIf="isRegistering" (ngSubmit)="onSubmit()" [formGroup]="form">
       <div class="flex">
         <div class="info">
           <label for="numeral">Número de sede</label>
-          <input type="number" id="numeral" required />
+          <input
+            type="number"
+            id="numeral"
+            required
+            formControlName="numeral"
+          />
         </div>
         <div class="info">
           <label for="cellphone">Número de celular</label>
-          <input type="text" id="cellphone" required />
+          <input
+            type="text"
+            id="cellphone"
+            required
+            formControlName="cellphone"
+          />
         </div>
       </div>
       <div class="info">
         <label for="address">Dirección</label>
-        <input type="text" id="address" required />
+        <input type="text" id="address" required formControlName="address" />
       </div>
       <div class="flex">
         <div class="info">
           <label for="password">Contraseña</label>
-          <input type="password" id="password" required />
+          <input
+            type="password"
+            id="password"
+            required
+            formControlName="password"
+          />
         </div>
         <div class="info">
           <label for="repeatPassword">Confirmar contraseña</label>
-          <input type="password" id="repeatPassword" required />
+          <input
+            type="password"
+            id="repeatPassword"
+            required
+            formControlName="repeatPassword"
+          />
         </div>
       </div>
       <div class="actions">
