--- a/src/styles.css
+++ b/src/styles.css
@@ -1,56 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
 :root {
-  --primary-color-50: #fcf5fe;
-  --primary-color-100: #f8eafd;
-  --primary-color-200: #f1d5f9;
-  --primary-color-300: #e8b4f3;
-  --primary-color-400: #d36ee7;
-  --primary-color-500: #c758dd;
-  --primary-color-600: #ad39c0;
-  --primary-color-700: #912c9f;
-  --primary-color-800: #782682;
-  --primary-color-900: #65246b;
-  --primary-color-950: #410c46;
+  /* lavendar by https://aicolors.co/ */
+  --primary-100: #8b5fbf;
+  --primary-200: #61398f;
+  --primary-300: #ffffff;
+  --accent-100: #d6c6e1;
+  --accent-200: #9a73b5;
+  --text-100: #4a4a4a;
+  --text-200: #878787;
+  --bg-100: #f5f3f7;
+  --bg-200: #e9e4ed;
+  --bg-300: #ffffff;
 
-  --secondary-color-50: #eefbfd;
-  --secondary-color-100: #d4f4f9;
-  --secondary-color-200: #afe8f2;
-  --secondary-color-300: #6ed3e7;
-  --secondary-color-400: #39bad7;
-  --secondary-color-500: #1d9ebd;
-  --secondary-color-600: #1b7f9f;
-  --secondary-color-700: #1d6781;
-  --secondary-color-800: #20546a;
-  --secondary-color-900: #1f475a;
-  --secondary-color-950: #0f2e3d;
-
-  --gray-color-50: #f7f7f7;
-  --gray-color-100: #e7e7e7;
-  --gray-color-200: #dfdfdf;
-  --gray-color-300: #c8c8c8;
-  --gray-color-400: #adadad;
-  --gray-color-500: #999999;
-  --gray-color-600: #888888;
-  --gray-color-700: #7b7b7b;
-  --gray-color-800: #676767;
-  --gray-color-900: #545454;
-  --gray-color-950: #363636;
-
-  --white-color: #f0f0f0;
-  --background-color: var(--gray-color-100);
-  --black-color: #0f0f0f;
-
-  --shadow: 0 0 1rem var(--gray-color-300);
+  --bg: var(--bg-100);
+  --black: #0f0f0f;
 }
 
-* {
+*,
+::before,
+::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
 html {
-  font-size: 20px;
+  font-size: 62.5%;
 }
 
 body {
@@ -68,12 +43,12 @@ table {
 }
 
 thead {
-  color: var(--gray-color-900);
-  border-bottom: 2px solid var(--primary-color-600);
+  color: var(--text-100);
+  border-bottom: 2px solid var(--accent-100);
 }
 
 tbody {
-  color: var(--gray-color-900);
+  color: var(--text-100);
   font-size: 0.9rem;
 }
 
@@ -89,4 +64,51 @@ tbody tr:nth-child(even) {
 
 tbody tr:hover {
   background-color: var(--gray-color-300);
+}
+
+.shadow {
+  box-shadow: 0 0 1rem #00000077;
+}
+
+h1,
+h2,
+h3,
+p,
+label {
+  color: var(--text-100);
+}
+
+input,
+select {
+  color: var(--text-200);
+}
+
+button {
+  color: var(--bg);
+  background-color: var(--primary-100);
+  font-size: 1rem;
+  font-weight: 600;
+  border: none;
+  padding: 0.5rem 0.8rem;
+  transition-duration: 105ms;
+}
+
+button:hover {
+  cursor: pointer;
+  transform: scale(1.02);
+}
+
+button:active {
+  transform: scale(0.98);
+}
+
+input,
+select,
+button {
+  font-family: inherit;
+}
+
+input:focus,
+select:focus {
+  outline: none;
 }
