--- a/src/app/modules/admin/pages/campuses/campuses.component.html
+++ b/src/app/modules/admin/pages/campuses/campuses.component.html
@@ -89,6 +89,24 @@
   <dialog [open]="modal">
     <h2>Sede #{{ modalData.numeral }}</h2>
     <hr />
+    <section class="dialog-content">
+      <p class="flex">
+        <span>ID generado</span>
+        <span>{{ modalData.id }}</span>
+      </p>
+      <p class="flex">
+        <span>Fecha y hora de creación</span>
+        <span>{{ modalData.createdAt }}</span>
+      </p>
+      <p class="flex">
+        <span>Actualizado por última vez</span>
+        <span>{{ modalData.updatedAt }}</span>
+      </p>
+      <p class="flex">
+        <span>Terminal generado</span>
+        <span>{{ modalData.terminal }}</span>
+      </p>
+    </section>
     <hr />
     <button type="button" (click)="closeModal()">Cerrar</button>
   </dialog>
