--- a/src/app/modules/admin/pages/campuses/campuses.component.html
+++ b/src/app/modules/admin/pages/campuses/campuses.component.html
@@ -90,24 +90,36 @@
     <h2>Sede #{{ modalData.numeral }}</h2>
     <hr />
     <section class="dialog-content">
-      <p class="flex">
+      <p>
         <span>ID generado</span>
         <span>{{ modalData.id }}</span>
       </p>
-      <p class="flex">
+      <p>
         <span>Fecha y hora de creación</span>
         <span>{{ modalData.createdAt }}</span>
       </p>
-      <p class="flex">
+      <p>
         <span>Actualizado por última vez</span>
         <span>{{ modalData.updatedAt }}</span>
       </p>
-      <p class="flex">
+      <p>
         <span>Terminal generado</span>
         <span>{{ modalData.terminal }}</span>
       </p>
     </section>
     <hr />
-    <button type="button" (click)="closeModal()">Cerrar</button>
+    <section class="platforms">
+      <h3>Plataformas enlazadas</h3>
+      <form>
+        <div *ngFor="let platform of platforms" class="platform-info">
+          <label [for]="platform.name">{{ platform.name }}</label>
+          <input type="checkbox" [id]="platform.name" />
+        </div>
+      </form>
+    </section>
+    <hr />
+    <section class="actions">
+      <button type="button" (click)="closeModal()">Cerrar</button>
+    </section>
   </dialog>
 </main>
