feat: fix params bug and link api with new-transfers component

--- a/src/app/modules/home/components/new-transfer-form/new-transfer-form.component.html
+++ b/src/app/modules/home/components/new-transfer-form/new-transfer-form.component.html
@@ -9,7 +9,7 @@
         ></option>
       </datalist>
       <label for="platform">Selecciona la plataforma</label>
-      <input list="platforms" id="platform" formControlName="platform" />
+      <input list="platforms" id="platform" formControlName="platformName" />
     </div>
     <div class="flex">
       <div>
