update: new time property and fix params

--- a/src/app/modules/reports/components/transfers-table/transfers-table.component.html
+++ b/src/app/modules/reports/components/transfers-table/transfers-table.component.html
@@ -12,7 +12,7 @@
       <td>{{ transfer.id }}</td>
       <td>{{ transfer.platformName }}</td>
       <td>{{ transfer.value }}</td>
-      <td>12:00</td>
+      <td>{{ transfer.time }}</td>
     </tr>
   </tbody>
 </table>
