--- a/src/app/modules/admin/components/login-form/login-form.component.html
+++ b/src/app/modules/admin/components/login-form/login-form.component.html
@@ -1,4 +1,4 @@
-<form>
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
   <fieldset>
     <div>
       <label for="email">Correo electrónico</label>
@@ -6,6 +6,7 @@
         type="email"
         placeholder="Correo electrónico"
         id="email"
+        formControlName="username"
         required
       />
     </div>
@@ -14,7 +15,13 @@
         <label for="password">Contraseña</label>
         <span><a href="">¿Olvidaste tu contraseña?</a></span>
       </div>
-      <input type="password" placeholder="*********" id="password" required />
+      <input
+        type="password"
+        placeholder="*********"
+        id="password"
+        formControlName="password"
+        required
+      />
     </div>
     <button type="submit">Iniciar sesión</button>
   </fieldset>
