feat: connect logout button with api

--- a/src/app/modules/admin/components/navbar/navbar.component.html
+++ b/src/app/modules/admin/components/navbar/navbar.component.html
@@ -30,7 +30,7 @@
   </ul>
   <div>
     <hr />
-    <a>
+    <a (click)="logout()">
       <span class="material-symbols-outlined"> logout </span>
       Cerrar sesión
     </a>
