--- a/src/app/modules/reports/components/final-stats/final-stats.component.html
+++ b/src/app/modules/reports/components/final-stats/final-stats.component.html
@@ -1,7 +1,11 @@
 <section role="region" id="final-stats">
-  <p>Transferencias: <span>4</span></p>
+  <p>
+    Transferencias: <span>{{ transfersAmount }}</span>
+  </p>
   <div class="separator"></div>
-  <p>Total: <span>$75.000</span></p>
+  <p>
+    Total: <span>{{ total }}</span>
+  </p>
   <div class="separator"></div>
   <button>Imprimir</button>
 </section>
