feat: define method to get the user logged and update nav bar

--- a/src/app/modules/admin/components/navbar/navbar.component.html
+++ b/src/app/modules/admin/components/navbar/navbar.component.html
@@ -3,7 +3,10 @@
     <span class="material-symbols-outlined"> menu </span>
   </button>
   <button type="button" class="account">
-    <span>ID 7 - ACCOUNT NAME</span>
+    <span
+      >ID {{ user?.id }} - {{ user?.name?.toUpperCase() }}
+      {{ user?.lastName?.toUpperCase() }}</span
+    >
     <span class="material-symbols-outlined"> expand_more </span>
   </button>
 </header>
