--- a/src/app/modules/portal/pages/login/login.component.css
+++ b/src/app/modules/portal/pages/login/login.component.css
@@ -1,40 +1,3 @@
 main {
-  display: flex;
-  align-items: center;
-  height: 100vh;
-}
-
-h2 {
-  text-align: center;
-  margin: 0;
-}
-
-#images {
-  width: 65%;
-  height: 100%;
-}
-
-#images img {
-  display: block;
-  width: 100%;
-  height: 50%;
-  object-fit: cover;
-}
-
-#form {
-  width: 35%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
-
-footer {
-  text-align: center;
-}
-
-footer h2 {
-  margin: 0 0 0.5rem 0;
-  text-transform: uppercase;
-  font-size: 1.2rem;
+  min-height: calc(100vh - var(--login-footer-h));
 }
