--- a/src/app/modules/portal/pages/login/login.component.html
+++ b/src/app/modules/portal/pages/login/login.component.html
@@ -1,14 +1,6 @@
 <main>
-  <section role="region" id="images">
-    <img src="assets/images/img1.jpg" alt="img1" />
-    <img src="assets/images/img2.jpg" alt="" />
-  </section>
   <section role="region" id="form">
-    <h2>Bienvenido a Animalaya</h2>
     <app-login-form></app-login-form>
-    <footer>
-      <h2>Servinet Computers</h2>
-      <address>Versión: 1.0 - &copy; 2023</address>
-    </footer>
   </section>
 </main>
+<app-login-footer></app-login-footer>
