--- a/src/app/modules/shared/components/login-footer/login-footer.component.css
+++ b/src/app/modules/shared/components/login-footer/login-footer.component.css
@@ -1,18 +1,25 @@
 footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  width: 100%;
+  height: var(--login-footer-h);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
   text-align: center;
-  background-color: var(--black-color);
-  color: var(--background-color);
-  padding: 1.5rem;
+  background-color: var(--black);
 }
 
 footer h2 {
-  margin: 0;
-  margin-bottom: 1rem;
   text-transform: uppercase;
-  font-weight: 600;
-  font-size: 1.25rem;
+  font-size: 2rem;
+}
+
+footer address {
+  font-size: 1.6rem;
+}
+
+footer h2,
+footer address {
+  color: var(--bg);
 }
