--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 :root {
+  /* -- colors */
   /* lavendar by https://aicolors.co/ */
   --primary-100: #8b5fbf;
   --primary-200: #61398f;
@@ -11,9 +12,10 @@
   --bg-100: #f5f3f7;
   --bg-200: #e9e4ed;
   --bg-300: #ffffff;
-
   --bg: var(--bg-100);
   --black: #0f0f0f;
+  /* -- measures -- */
+  --login-footer-h: 12rem;
 }
 
 *,
@@ -30,7 +32,7 @@ html {
 
 body {
   font-family: "Inter", sans-serif;
-  background-color: var(--background-color);
+  background-color: var(--bg);
 }
 
 .material-symbols-outlined {
