update: portal login design

--- a/src/app/modules/portal/components/login-form/login-form.component.css
+++ b/src/app/modules/portal/components/login-form/login-form.component.css
@@ -1,62 +1,16 @@
 form {
-  width: 70%;
+  max-width: 40rem;
   margin: auto;
-}
-
-fieldset {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  border: 0;
-  padding: 0;
 }
 
-label {
-  display: block;
-  color: var(--gray-color-900);
-  font-size: 0.8rem;
+form label {
+  margin-bottom: 0.4rem;
   font-weight: 600;
-  margin-bottom: 0.25rem;
 }
 
-input {
-  font-size: 0.9rem;
-  background-color: var(--background-color);
-  color: var(--gray-color-900);
-  border: none;
-  border-bottom: 2px solid var(--gray-color-400);
+form input {
   width: 100%;
-}
-
-button {
-  background-color: var(--primary-color-500);
-  color: var(--background-color);
-  width: 50%;
-  font-weight: 600;
-  font-size: 1rem;
-  border: 2px solid;
-  border-radius: 0.5rem;
-  display: block;
-  margin: auto;
-}
-
-input,
-button {
-  font-family: inherit;
-  padding: 0.5rem 0.8rem;
-}
-
-button:hover {
-  cursor: pointer;
-  background-color: var(--primary-color-600);
-}
-
-button:active {
-  background-color: var(--primary-color-700);
-}
-
-input:focus,
-input:valid {
-  outline: none;
-  border-color: var(--secondary-color-500);
 }
