--- a/src/app/modules/portal/pages/login/login.component.css
+++ b/src/app/modules/portal/pages/login/login.component.css
@@ -1,3 +1,20 @@
 main {
   min-height: calc(100vh - var(--login-footer-h));
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#form {
+  width: 80%;
+  max-width: 60rem;
+  padding: 8rem 3rem;
+  border-radius: 2rem;
+  background-color: var(--bg-300);
+}
+
+#form h1 {
+  margin-bottom: 3rem;
+  text-align: center;
+  font-size: 4rem;
 }
