--- a/src/app/modules/portal/pages/login/login.component.html
+++ b/src/app/modules/portal/pages/login/login.component.html
@@ -1,5 +1,8 @@
-<main>
-  <section role="region" id="form">
+<main class="background-gradient">
+  <section role="region" id="form" class="shadow">
+    <header>
+      <h1>¡Bienvenido de vuelta!</h1>
+    </header>
     <app-login-form></app-login-form>
   </section>
 </main>
