--- a/src/app/modules/layout/components/navbar/navbar.component.html
+++ b/src/app/modules/layout/components/navbar/navbar.component.html
@@ -1,20 +1,34 @@
 <nav>
-  <header>
-    <h1>Servinet Computers</h1>
-  </header>
-  <hr />
-  <ul>
-    <li>
-      <a routerLink="/home">
-        <span class="material-symbols-outlined">home</span>
-        Inicio
-      </a>
-    </li>
-    <li>
-      <a routerLink="/reports">
-        <span class="material-symbols-outlined">lists</span>
-        Reportes
-      </a>
-    </li>
-  </ul>
+  <div>
+    <header>
+      <h1>Servinet Computers</h1>
+      <h2>Sede #2</h2>
+    </header>
+    <div class="divider"></div>
+    <ul>
+      <li>
+        <a routerLink="/home">
+          <span class="material-symbols-outlined">home</span>
+          Inicio
+        </a>
+      </li>
+      <li>
+        <a routerLink="/reports">
+          <span class="material-symbols-outlined">lists</span>
+          Reportes
+        </a>
+      </li>
+    </ul>
+  </div>
+  <div>
+    <div class="divider"></div>
+    <ul>
+      <li>
+        <a>
+          <span class="material-symbols-outlined">logout</span>
+          Cerrar sesión
+        </a>
+      </li>
+    </ul>
+  </div>
 </nav>
