--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,7 @@
   --black: #0f0f0f;
   /* -- measures -- */
   --login-footer-h: 12rem;
+  --nav-w: 25rem;
 }
 
 *,
@@ -33,6 +34,16 @@ html {
 body {
   font-family: "Inter", sans-serif;
   background-color: var(--bg);
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
 }
 
 h1,
