--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,6 +1,9 @@
 <app-header-title headerTitle="Inicio"></app-header-title>
 <main>
-  <section role="region" id="new-transfer">
+  <section role="region" id="new-transfer" class="shadow">
+    <header>
+      <h2 class="title">Registrar Transferencia</h2>
+    </header>
     <app-new-transfer-form></app-new-transfer-form>
   </section>
 </main>
