--- a/src/app/modules/home/components/new-transfer-form/new-transfer-form.component.html
+++ b/src/app/modules/home/components/new-transfer-form/new-transfer-form.component.html
@@ -1,30 +1,25 @@
 <form method="post" (ngSubmit)="onSubmit()" [formGroup]="form">
-  <fieldset>
-    <legend>Añadir nueva transferencia</legend>
-    <div>
-      <datalist id="platforms">
-        <option
-          *ngFor="let platform of platforms"
-          [value]="platform.name"
-        ></option>
-      </datalist>
-      <label for="platform">Selecciona la plataforma</label>
-      <input list="platforms" id="platform" formControlName="platformName" />
-    </div>
-    <div class="flex">
-      <div>
-        <label for="value">Valor transferido</label>
-        <input type="text" id="value" formControlName="value" />
-      </div>
-      <div>
-        <label for="amount">Cantidad</label>
-        <select id="amount" formControlName="amount">
-          <option *ngFor="let number of numbers" [value]="number">
-            {{ number }}
-          </option>
-        </select>
-      </div>
-    </div>
-    <button type="submit">Enviar</button>
-  </fieldset>
+  <div class="input-spacing">
+    <datalist id="platforms">
+      <option
+        *ngFor="let platform of platforms"
+        [value]="platform.name"
+      ></option>
+    </datalist>
+    <label for="platform">Selecciona la plataforma</label>
+    <input list="platforms" id="platform" formControlName="platformName" />
+  </div>
+  <div class="input-spacing">
+    <label for="value">Valor transferido</label>
+    <input type="text" id="value" formControlName="value" />
+  </div>
+  <div class="input-spacing">
+    <label for="amount">Cantidad</label>
+    <select id="amount" formControlName="amount">
+      <option *ngFor="let number of numbers" [value]="number">
+        {{ number }}
+      </option>
+    </select>
+  </div>
+  <button type="submit">Enviar</button>
 </form>
