--- a/src/app/modules/home/pages/home/home.component.css
+++ b/src/app/modules/home/pages/home/home.component.css
@@ -2,4 +2,7 @@
   width: 80%;
   max-width: 600px;
   margin: auto;
+  padding: 3rem;
+  border-radius: 2rem;
+  background-color: var(--bg-300);
 }
