--- a/src/app/modules/layout/components/navbar/navbar.component.css
+++ b/src/app/modules/layout/components/navbar/navbar.component.css
@@ -6,7 +6,7 @@ nav {
   top: 0;
   color: var(--text-100);
   padding: 4rem 2rem;
-  border-right: 2px solid var(--bg-300);
+  border-right: 2px solid var(--bg-200);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -16,7 +16,7 @@ nav {
   width: 100%;
   height: 2px;
   border: none;
-  background: var(--accent-100);
+  background: var(--bg-200);
 }
 
 header {
