--- a/src/styles.css
+++ b/src/styles.css
@@ -49,19 +49,26 @@ a {
 h1,
 h2,
 h3,
-p {
+p,
+label,
+input,
+select {
   color: var(--text-100);
+}
+
+h2.title {
+  text-transform: uppercase;
+  font-size: 1.7rem;
+  color: var(--text-200);
+  padding-bottom: 0.5rem;
+  margin-bottom: 2.5rem;
+  border-bottom: 2px solid var(--accent-100);
 }
 
 label {
   display: block;
   font-size: 1.6rem;
-  color: var(--text-200);
-}
-
-input,
-select {
-  color: var(--text-100);
+  font-weight: 600;
 }
 
 button {
@@ -83,12 +90,19 @@ button:active {
   transform: scale(0.98);
 }
 
+input {
+  padding: 0.8rem 1.6rem;
+}
+
+select {
+  padding: 0.7rem 1.6rem;
+}
+
 input,
 select {
-  padding: 1rem 0.6rem;
-  border: 2px solid var(--text-200);
-  border-radius: 0.5rem;
-  font-size: 1.5rem;
+  border: 2px solid #c0c0c0;
+  border-radius: 1rem;
+  font-size: 1.7rem;
 }
 
 input,
@@ -137,9 +151,13 @@ tbody tr:hover {
 }
 
 .shadow {
-  box-shadow: 0 0 1rem #00000055;
+  box-shadow: 0 0 1rem #c0c0c0;
 }
 
 .background-gradient {
   background: linear-gradient(to bottom, var(--bg) 80%, var(--bg-200));
+}
+
+.input-spacing label {
+  margin-bottom: 0.5rem;
 }
