feat: create new hard coded little nav to see actual navigation

--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<app-header-title headerTitle="Inicio"></app-header-title>
+<app-little-nav></app-little-nav>
 <main>
   <section role="region" id="new-transfer" class="shadow">
     <header>
