feat: little nav now receives a object

--- a/src/app/modules/shared/components/little-nav/little-nav.component.html
+++ b/src/app/modules/shared/components/little-nav/little-nav.component.html
@@ -1,16 +1,22 @@
 <nav>
   <ul>
-    <li>
-      <a routerLink="/">
-        <span class="material-symbols-outlined">home</span>
-        Inicio
-      </a>
-    </li>
-    <li>
-      <span class="material-symbols-outlined chevron">chevron_right</span>
-    </li>
-    <li>
-      <a routerLink="/" class="last">Nueva transferencia</a>
-    </li>
+    <ng-container *ngFor="let route of routes; index as i">
+      <li>
+        <a
+          [routerLink]="route.route ?? undefined"
+          [ngClass]="routes.length > 1 && i === routes.length - 1 ? 'last' : ''"
+        >
+          <span
+            class="material-symbols-outlined"
+            *ngIf="route.icon !== undefined"
+            >{{ route.icon }}</span
+          >
+          {{ route.title }}
+        </a>
+      </li>
+      <li *ngIf="routes.length > 1 && i < routes.length - 1">
+        <span class="material-symbols-outlined chevron">chevron_right</span>
+      </li>
+    </ng-container>
   </ul>
 </nav>
