--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<app-little-nav></app-little-nav>
+<app-little-nav [routes]="routes"></app-little-nav>
 <main>
   <section role="region" id="new-transfer" class="shadow">
     <header>
