--- a/src/app/modules/shared/components/little-nav/little-nav.component.css
+++ b/src/app/modules/shared/components/little-nav/little-nav.component.css
@@ -4,22 +4,25 @@ nav {
   margin: 1rem 0rem;
 }
 
-ul {
+ul,
+ul * {
   display: flex;
   align-items: center;
 }
 
 li a {
   color: var(--text-100);
-  display: flex;
-  align-items: center;
-  gap: 0.4rem;
   font-size: 1.6rem;
   font-weight: 600;
+  gap: 0.4rem;
 }
 
 .chevron {
-  vertical-align: middle;
+  cursor: default;
+}
+
+li a.last {
+  cursor: text;
 }
 
 .chevron,
