feat: redesign full reports page and delete header title component

--- a/src/app/modules/reports/components/calendars-form/calendars-form.component.css
+++ b/src/app/modules/reports/components/calendars-form/calendars-form.component.css
@@ -1,41 +1,5 @@
 form {
   display: flex;
+  align-items: center;
   justify-content: space-around;
-}
-
-input {
-  color: var(--gray-color-900);
-  border-radius: 0.2rem;
-}
-
-button {
-  background-color: var(--secondary-color-50);
-  color: var(--secondary-color-900);
-  font-weight: 600;
-  border-radius: 0.45rem;
-}
-
-input,
-button {
-  font-family: inherit;
-  font-size: 0.75rem;
-  width: 10rem;
-  padding: 0.2rem 0.8rem;
-  border: 0.1rem solid var(--secondary-color-500);
-}
-
-input:focus {
-  outline: none;
-  border-color: var(--secondary-color-600);
-}
-
-button:hover {
-  cursor: pointer;
-  background-color: var(--secondary-color-500);
-  color: var(--background-color);
-}
-
-button:active {
-  border-color: var(--secondary-color-600);
-  background-color: var(--secondary-color-600);
 }
