--- a/src/app/modules/reports/components/final-stats/final-stats.component.html
+++ b/src/app/modules/reports/components/final-stats/final-stats.component.html
@@ -1,11 +1,11 @@
-<section role="region" id="final-stats">
+<div class="container">
   <p>
-    Transferencias: <span>{{ transfersAmount }}</span>
+    Transferencias<span>{{ transfersAmount }}</span>
   </p>
   <div class="separator"></div>
   <p>
-    Total: <span>{{ total }}</span>
+    Total<span>{{ total }}</span>
   </p>
   <div class="separator"></div>
   <button>Imprimir</button>
-</section>
+</div>
