--- a/src/app/modules/reports/components/calendars-form/calendars-form.component.html
+++ b/src/app/modules/reports/components/calendars-form/calendars-form.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
-  <input type="datetime-local" formControlName="startDate" />
-  <input type="datetime-local" formControlName="endDate" />
+  <input type="date" formControlName="startDate" />
+  <input type="date" formControlName="endDate" />
   <button type="submit">Consultar</button>
 </form>
