--- a/src/app/modules/reports/components/final-stats/final-stats.component.css
+++ b/src/app/modules/reports/components/final-stats/final-stats.component.css
@@ -1,57 +1,24 @@
-#final-stats {
-  width: 80%;
-  max-width: 840px;
+.container {
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
-  gap: 0.5rem;
-  margin: -1rem auto;
+  justify-content: space-evenly;
 }
 
 p {
-  color: var(--gray-color-900);
-  background-color: var(--secondary-color-200);
-  font-size: 0.9rem;
-  font-weight: 600;
-  padding: 0.3rem 0.85rem;
-  border-radius: 0.6rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.4rem;
+  text-align: center;
 }
 
 p span {
-  color: var(--secondary-color-600);
-}
-
-button {
-  height: 1.8rem;
-  padding: 0 1.6rem;
-  font-family: inherit;
-  font-size: 0.8rem;
   font-weight: 600;
-  background-color: var(--secondary-color-500);
-  color: var(--background-color);
-  border-radius: 0.5rem;
-  border: none;
 }
 
 .separator {
   display: flex;
   align-self: center;
   width: 2px;
-  height: 2rem;
-  background-color: var(--gray-color-300);
-}
-
-button,
-p {
-  text-align: center;
-  width: 10rem;
-}
-
-button:hover {
-  cursor: pointer;
-  background-color: var(--secondary-color-600);
-}
-
-button:active {
-  background-color: var(--secondary-color-700);
+  height: 4rem;
+  background-color: var(--accent-100);
 }
