--- a/src/app/modules/reports/pages/reports/reports.component.css
+++ b/src/app/modules/reports/pages/reports/reports.component.css
@@ -11,8 +11,13 @@ main * {
   width: 100%;
 }
 
+#transfers {
+  overflow-x: auto;
+}
+
 #final-stats {
   padding: 2rem 0;
+  border: 2px solid var(--accent-100);
   border-radius: 3rem;
   background-color: var(--bg-300);
 }
