feat: update cursor and connect logout method with api

--- a/src/app/modules/layout/components/navbar/navbar.component.html
+++ b/src/app/modules/layout/components/navbar/navbar.component.html
@@ -24,7 +24,7 @@
     <div class="divider"></div>
     <ul>
       <li>
-        <a>
+        <a (click)="logout()">
           <span class="material-symbols-outlined">logout</span>
           Cerrar sesión
         </a>
