feat: define reactive method to get the available platforms

--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -6,4 +6,5 @@
     </header>
     <app-new-transfer-form></app-new-transfer-form>
   </section>
+  <section role="region" id="available-platforms"></section>
 </main>
