feat: create card to see the available platfrorms

--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -6,5 +6,10 @@
     </header>
     <app-new-transfer-form></app-new-transfer-form>
   </section>
-  <section role="region" id="available-platforms"></section>
+  <section role="region" id="available-platforms">
+    <header>
+      <h2 class="title">Plataformas disponibles</h2>
+    </header>
+    <app-available-platforms></app-available-platforms>
+  </section>
 </main>
