--- a/src/styles.css
+++ b/src/styles.css
@@ -45,7 +45,8 @@ a {
   color: inherit;
 }
 
-p {
+p,
+li {
   font-size: 1.6rem;
 }
 
@@ -57,7 +58,8 @@ label,
 input,
 select,
 tbody,
-thead {
+thead,
+li {
   color: var(--text-100);
 }
 
@@ -67,7 +69,7 @@ h2.title {
   color: var(--text-200);
   padding-bottom: 0.5rem;
   margin-bottom: 2.5rem;
-  border-bottom: 2px solid var(--accent-100);
+  border-bottom: 2px solid var(--text-200);
 }
 
 label {
