--- a/src/app/modules/admin/components/login-form/login-form.component.html
+++ b/src/app/modules/admin/components/login-form/login-form.component.html
@@ -1,28 +1,24 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
-  <fieldset>
-    <div>
-      <label for="email">Correo electrónico</label>
-      <input
-        type="email"
-        placeholder="Correo electrónico"
-        id="email"
-        formControlName="username"
-        required
-      />
-    </div>
-    <div>
-      <div class="input-password">
-        <label for="password">Contraseña</label>
-        <span><a href="">¿Olvidaste tu contraseña?</a></span>
-      </div>
-      <input
-        type="password"
-        placeholder="*********"
-        id="password"
-        formControlName="password"
-        required
-      />
-    </div>
-    <button type="submit">Iniciar sesión</button>
-  </fieldset>
+<form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-spacing">
+  <div>
+    <label for="email">Correo electrónico</label>
+    <input
+      type="email"
+      placeholder="Correo electrónico"
+      id="email"
+      formControlName="username"
+      required
+    />
+  </div>
+  <div>
+    <label for="password">Contraseña</label>
+    <input
+      type="password"
+      placeholder="*********"
+      id="password"
+      formControlName="password"
+      required
+    />
+  </div>
+  <button type="submit">Iniciar sesión</button>
+  <a>¿Haz olvidado la contraseña?</a>
 </form>
