--- a/src/app/modules/admin/pages/login/login.component.html
+++ b/src/app/modules/admin/pages/login/login.component.html
@@ -1,14 +1,15 @@
 <main>
-  <div class="card">
-    <section role="region" id="welcome">
-      <header>
-        <h1>¡Bienvenido!</h1>
-        <h2>Julio Bautista Doctor</h2>
-      </header>
-    </section>
-    <section role="region" id="login-form">
-      <app-login-form></app-login-form>
-    </section>
-  </div>
+  <section role="region" id="welcome">
+    <header>
+      <h1>¡Bienvenido de vuelta!</h1>
+      <p>Inicia sesión para acceder a tus productos y reportes del día.</p>
+    </header>
+  </section>
+  <section role="region" id="login-form">
+    <header>
+      <h2>¿Listo para iniciar sesión?</h2>
+    </header>
+    <app-login-form></app-login-form>
+  </section>
 </main>
 <app-login-footer></app-login-footer>
