--- a/src/app/modules/portal/components/login-form/login-form.component.html
+++ b/src/app/modules/portal/components/login-form/login-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
+<form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-spacing">
   <div>
     <label for="terminal">Terminal</label>
     <input
