--- a/src/app/modules/admin/components/navbar/navbar.component.html
+++ b/src/app/modules/admin/components/navbar/navbar.component.html
@@ -1,15 +1,3 @@
-<header>
-  <button type="button" class="menu">
-    <span class="material-symbols-outlined"> menu </span>
-  </button>
-  <button type="button" class="account">
-    <span
-      >ID {{ user?.id }} - {{ user?.name?.toUpperCase() }}
-      {{ user?.lastName?.toUpperCase() }}</span
-    >
-    <span class="material-symbols-outlined"> expand_more </span>
-  </button>
-</header>
 <nav>
   <ul>
     <li>
@@ -32,10 +20,14 @@
     </li>
   </ul>
   <div>
-    <hr />
-    <a (click)="logout()">
-      <span class="material-symbols-outlined"> logout </span>
-      Cerrar sesión
-    </a>
+    <div class="divider"></div>
+    <ul>
+      <li>
+        <a (click)="logout()">
+          <span class="material-symbols-outlined"> logout </span>
+          Cerrar sesión
+        </a>
+      </li>
+    </ul>
   </div>
 </nav>
