--- a/src/app/modules/admin/components/stats/stats.component.html
+++ b/src/app/modules/admin/components/stats/stats.component.html
@@ -1,17 +1,17 @@
-<table>
+<table class="shadow">
   <thead>
     <tr>
-      <th>ID</th>
+      <th class="center">ID</th>
       <th>Plataforma</th>
-      <th>Transferencias</th>
+      <th class="center">Transferencias</th>
       <th>Total</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let platform of platforms">
-      <td>{{ platform.platformId }}</td>
+      <td class="center">{{ platform.platformId }}</td>
       <td>{{ platform.platformName }}</td>
-      <td>{{ platform.transfersAmount }}</td>
+      <td class="center">{{ platform.transfersAmount }}</td>
       <td>{{ platform.total }}</td>
     </tr>
   </tbody>
