--- a/src/app/modules/admin/pages/dashboard/dashboard.component.css
+++ b/src/app/modules/admin/pages/dashboard/dashboard.component.css
@@ -1,20 +1,40 @@
-main {
-  background-color: var(--white-color);
-  margin: 6rem 2rem 2rem 15rem;
-  min-height: calc(100vh - 8rem);
-  border-radius: 1rem;
-  padding: 2rem;
-  box-shadow: var(--shadow);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
+.page {
+  margin-left: var(--nav-w);
 }
 
-#campuses,
-#stats {
+.divider {
+  margin-top: calc((var(--little-nav-h) * -1) - 2rem);
+  width: 2px;
+  min-height: 100%;
+  border: none;
+  background-color: var(--bg-200);
+}
+
+main {
+  min-height: calc(100vh - var(--little-nav-h) - 2rem);
+  padding: 0 2rem 4rem;
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
+}
+
+section {
   width: 100%;
-  border: 0.15rem solid var(--primary-color-400);
+  background-color: var(--bg-200);
+  padding: 3rem;
   border-radius: 1rem;
-  padding: 1rem;
+  box-shadow: inset 0 0 1rem var(--accent-100);
+}
+
+h2 {
+  font-size: 2.2rem;
+  margin-bottom: 3rem;
+}
+
+#stats {
+  width: 60%;
+}
+
+#campuses {
+  width: 40%;
 }
